cabal-version:       2.2

name:                defiende-la-torre
version:             0.1.0.0
homepage:            https://github.com/githubuser/defiende-la-torre#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable defiende-la-torre
  main-is: MainServer.hs
  hs-source-dirs: src
  other-modules:
      Types
      PathGeneration
      EnemyMovement
      WaveSystem
      TowerSystem
      ProjectileSystem
      NetworkServer

  build-depends:
      base >=4.12 && <4.15,
      aeson,
      bytestring,
      network,
      containers,
      linear

  default-language: Haskell2010

  ghc-options:
      -Wall
      -Wcompat
      -Widentities
      -Wincomplete-record-updates
      -Wincomplete-uni-patterns
      -Wmissing-export-lists
      -Wmissing-home-modules
      -Wpartial-fields
      -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/githubuser
